--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 	Aerial by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	modified by Wayne Beckom for portfolio and personal use
 -->
 <html>
 	<head>
-		<title>Aerial by HTML5 UP</title>
+		<title>Wayne Allen Beckom</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -25,11 +26,11 @@
 						<p>Creating performant and secure software.</p>
 						<nav>
 							<ul>
-								<li><a href="#" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
+								<li><a href="https://www.linkedin.com/in/beckomw/" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
 						
-								<li><a href="#" class="icon brands fa-gitlab"><span class="label">Gitlab</span></a></li>
-								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://gitlab.com/Beckomw/" class="icon brands fa-gitlab"><span class="label">Gitlab</span></a></li>
+								<li><a href="https://github.com/beckomw" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="mailto:WayneBeckom@outlook.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
 					</header>
