--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					</header>
 
 				<!-- Footer -->
-					
+        <a href="#"><button class="btn">A button for something cool <span class="ribbon">NEW</span></button></a>
 
 			</div>
 		</div>
