--- a/index.html
+++ b/index.html
@@ -18,6 +18,50 @@
 			<div id="bg"></div>
 			<div id="overlay"></div>
 			<div id="main">
+                
+      //Styling for button
+                      <style>
+
+
+                            .btn {
+  border: none;
+  border-radius: 5px;
+  padding: 12px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  background-color: #282A35;
+  color: white;
+  position: relative;
+}
+
+.ribbon {
+  width: 60px;
+  font-size: 14px;
+  padding: 4px;
+  position: absolute;
+  right: -25px;
+  top: -12px;
+  text-align: center;
+  border-radius: 25px;
+  transform: rotate(20deg);
+  background-color: #ff9800;
+  color: white;
+}
+
+ 
+                  </style>
+
+    //Styling for button 
+
+
+
+
+
+
+
+
+
+
 
 				<!-- Header -->
 					<header id="header">
