--- a/projects.html
+++ b/projects.html
@@ -229,6 +229,13 @@
                 </ul>
                 
             </h5>
+            <p>Education</p>
+            <ul>
+                <li>Hack Reactor | Advanced Software Engineering Immersive Bootcamp              Sep ‘24</li>
+                <li>Arapahoe Community College | Associate of Computer Science Graduating    Dec ‘25</li>
+                <li>Amazon Web Services Certified Cloud Practitioner Certificate   </li>
+                <li>Google IT Support Professional Certificate </li>
+            </ul>
         </div>
         
     </section>
