--- a/projects.html
+++ b/projects.html
@@ -187,6 +187,7 @@
             <h3>StoryNest</h3>
             <p>A low profile slack alternative: 
                 (Django, Auth0, React, and PostgreSQL)
+                Click the button below to view my gitlab where most of my work lies.
             </p>
             <p>    <a href="https://gitlab.com/Beckomw/storynest">
                 <button class="button-82-pushable" role="button">
