--- a/projects.html
+++ b/projects.html
@@ -187,8 +187,10 @@
             <h3>StoryNest</h3>
             <p>A low profile slack alternative: 
                 (Django, Auth0, React, and PostgreSQL)
-                Click the button below to view my gitlab where most of my work lies.
+               
             </p>
+
+            You can also see my other projects on Gitlab.
             <p>    <a href="https://gitlab.com/Beckomw/storynest">
                 <button class="button-82-pushable" role="button">
                     <span class="button-82-shadow"></span>
@@ -230,7 +232,7 @@
                 </ul>
                 
             </h5>
-            <p>Education</p>
+            <h4>Education</h4>
             <ul>
                 <li>Hack Reactor | Advanced Software Engineering Immersive Bootcamp              Sep ‘24</li>
                 <li>Arapahoe Community College | Associate of Computer Science Graduating    Dec ‘25</li>
