--- a/projects.html
+++ b/projects.html
@@ -194,17 +194,19 @@
             <div class="project">
                 <h3>StoryNest</h3>
                 <p>A streamlined Slack alternative built with Django, Auth0, React, and PostgreSQL</p>
+                <img src="storynestimage.png" alt="Embark Demo Screenshot" style=" width: 100%; border-radius: 10px; margin-bottom: 1rem;">
                 <a href="https://gitlab.com/Beckomw/storynest" class="button">View Gitlab Repository</a>
             </div>
             <div class="project">
                 <h3>Embark Demo</h3>
-                <p>Action RPG under development in C++</p>
-                <span style="color: var(--accent); font-style: italic;">Coming soon</span>
+                <p>Action RPG under development in C++. The story is about a young boy from spanish harlem who opens a dimension to a bizarre parallel world. He thought his father left him but his father was actually taken into a vast universe because of the special power they carry. This game is inspired by Metal Gear Solid and Parasite Eve.</p>
+                <img src="embarkdemopic.png" alt="Embark Demo Screenshot" style=" width: 100%; border-radius: 10px; margin-bottom: 1rem;">
+                <span style="color: var(--accent); font-style: italic;">Coming soon, Currently using Raylib Game Engine to test shaders and objects. </span>
             </div>
         </section>
 
         <section class="section" id="experience">
-            <h2>Experience & Education</h2>
+            <h2>Software Experience & Education</h2>
             <div class="project">
                 <h3>Next Chapter - Software Engineering Apprentice</h3>
                 <p>January 2024 - Present</p>
