--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 -->
 <html>
 	<head>
-		<title>Wayne Allen Beckom</title>
+		<title>Wayne Beckom</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -33,7 +33,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Wayne Allen Beckom</h1>
+						<h1>Wayne Beckom</h1>
 						<p>Software Engineer &nbsp;&bull;&nbsp; Full-Stack Development &nbsp;&bull;&nbsp; Denver, CO</p>
 						<p>Creating performant and secure software.</p>
 						<nav>
