--- a/projects.html
+++ b/projects.html
@@ -126,7 +126,7 @@
                 <span class="badge bg-info text-dark mx-1">C++/C#</span>
                 <span class="badge bg-info text-dark mx-1">AWS</span>
                 <span class="badge bg-info text-dark mx-1">Agile Development</span>
-                <span class="badge bg-info text-dark mx-1">CI/CD</span>
+                <span class="badge bg-info text-dark mx-1">FastAPI</span>
                 <span class="badge bg-info text-dark mx-1">Git</span>
                 <span class="badge bg-info text-dark mx-1">Auth0</span>
                 <span class="badge bg-info text-dark mx-1">Jest/Pytest</span>
@@ -150,7 +150,7 @@
                         <img src="storynestimage.png" class="card-img-top" alt="StoryNest">
                         <div class="card-body">
                             <h5 class="card-title">StoryNest</h5>
-                            <p class="card-text">A streamlined Slack alternative built with Django, Auth0, React, and PostgreSQL.</p>
+                            <p class="card-text">A streamlined Slack alternative built with FastAPI, Auth0, React, and PostgreSQL.</p>
                             <a href="https://gitlab.com/Beckomw/storynest" class="btn btn-accent">View Repository</a>
                         </div>
                     </div>
