--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
 <body style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color: #f4f4f4; margin: 0; padding: 0; display: flex; flex-direction: row; align-items: flex-start; justify-content: center;">
 
     <div style="writing-mode: vertical-rl; text-orientation: mixed; margin: 20px 20px 0 0; font-size: 24px; color: #333;">
-        <h1>My Artistry</h1>
+        <h1>Projects</h1>
     </div>
 
     <div style="position: relative; width: 70%; max-width: 800px;">
