--- a/blog.html
+++ b/blog.html
@@ -8,21 +8,21 @@
 <body style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color: #f4f4f4; margin: 0; padding: 0; display: flex; flex-direction: row; align-items: flex-start; justify-content: center;">
 
     <div style="writing-mode: vertical-rl; text-orientation: mixed; margin: 20px 20px 0 0; font-size: 24px; color: #333;">
-        <h1>My Artistry</h1>
+        <h1>Blog</h1>
     </div>
 
     <div style="position: relative; width: 70%; max-width: 800px;">
 
         <div style="width: 100%; background-color: #fff; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); margin: 20px 0; padding: 20px; transition: transform 0.2s; position: relative;">
             <div style="background: linear-gradient(to top right, rgba(173, 216, 230, 0.3), transparent 75%); position: absolute; top: 0; right: 0; bottom: 0; left: 0; border-radius: 10px;"></div>
-            <h2 style="color: #333; position: relative; z-index: 1;">Project Title</h2>
-            <p style="color: #666; position: relative; z-index: 1;">Description of the project goes here. This is a brief summary of what the project is about.</p>
+            <h2 style="color: #333; position: relative; z-index: 1;">Blog #1, NYC</h2>
+            <p style="color: #666; position: relative; z-index: 1;">  </p>
         </div>
 
         <div style="width: 100%; background-color: #fff; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); margin: 20px 0; padding: 20px; transition: transform 0.2s; position: relative;">
             <div style="background: linear-gradient(to top right, rgba(173, 216, 230, 0.3), transparent 75%); position: absolute; top: 0; right: 0; bottom: 0; left: 0; border-radius: 10px;"></div>
-            <h2 style="color: #333; position: relative; z-index: 1;">Project Title</h2>
-            <p style="color: #666; position: relative; z-index: 1;">Description of the project goes here. This is a brief summary of what the project is about.</p>
+            <h2 style="color: #333; position: relative; z-index: 1;">hmmmmmmmmm</h2>
+            <p style="color: #666; position: relative; z-index: 1;"></p>
         </div>
 
         <!-- Add more project divs as needed -->
