--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<header id="header">
 						<h1>Wayne Beckom</h1>
 						<p>Software Engineer &nbsp;&bull;&nbsp; Full-Stack Development &nbsp;&bull;&nbsp; Denver, CO</p>
-						<p>Creating performant and secure software.</p>
+						<p>Creating secure and performant software.</p>
 						<nav>
 							<ul>
 								<li><a href="https://www.linkedin.com/in/beckomw/" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
