corrected file path for blog link

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<nav>
 							<ul>
 								<li><a href="https://www.linkedin.com/in/beckomw/" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
-								<li><a href="beckomw.github.io/embark.html" class="fa fa-rss"><span class="fa fa-rss" aria-hidden="true">Blog</span></a></li>
+								<li><a href="embark.html" class="fa fa-rss"><span class="fa fa-rss" aria-hidden="true">Blog</span></a></li>
 								<li><a href="https://github.com/beckomw" class="icon brands fa-github"><span class="label">Github</span></a></li>
 								<li><a href="mailto:WayneBeckom@outlook.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
